<?xml version="1.0"?>
<package format="2">
  <name>pyhsm</name>
  <version>0.1.0</version>
  <description>Hierarchical state machine in Python</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
